[package]
name = "menu_generator"
version = "0.1.2"
authors = ["sabasit"]
edition = "2018"
description= "IOT ID card generator library"
license="MIT"
repository="https://github.com/SyedAbdulBasit7/IDCard_Library.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"